fixed issue with scrollbars and displaying raw sparql results fixed issue with codemirror being gone when resizing window

--- a/src/main/webapp/externals/yasgui.css
+++ b/src/main/webapp/externals/yasgui.css
@@ -21,6 +21,15 @@ span.CodeMirror-matchhighlight {
 	border-bottom: 2px dotted red;
 }
 
+.resultCm {
+	height: 400px;
+}
+.scrollCm {
+	height: 400px;
+}
+
+
+
 .clickable {
 	color: blue;
 	cursor: pointer;
